--- a/style3.css
+++ b/style3.css
@@ -1,24 +1,63 @@
-*{
+* {
     list-style: none;
     text-decoration: none;
     border-collapse: collapse;
-    margin: 0px;
-    padding: 0px;
-}
+    font-family: Pretendard;
 
-body{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+@media (max-width: 768px) {
+    .header {
+        width: 95%;
+    }
+    
+    .nav {
+        margin-left: 0;
+        justify-content: space-around; /* 작은 화면에서 좀 더 넓은 간격으로 배치 */
+    }
+    
+    .title {
+        padding-left: 0;
+    }
+}
+body {
     overflow-x: hidden;
+    
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #050505;
+    color: #fff;
 }
 
-.header{
+#cursor-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    pointer-events: none; /* 마우스 이벤트를 방지하여 마우스 커서 이미지가 클릭되지 않도록 함 */
+}
+
+.follower {
+    position: absolute;
+    pointer-events: none;
+    transition: opacity 0.5s ease;    
+    opacity: 1;
+}
+
+.follower.fade-out {
+    opacity: 0;
+}
+
+.header {
     display: flex;
     width: 1280px;
-    margin: 10px 30px 20px 40px;
-    /* height: 86px; */
+    margin: 10px 40px 25px 40px;
     line-height: 86px;
 }
 
-.nav{
+.nav {
     display: flex;
     justify-content: flex-end;
     line-height: 86px;
@@ -26,224 +65,473 @@ body{
     width: calc(1280px - 350px);
 }
 
-.nav >a {
-    margin-left: 14px;
-    color: #000000;
+.nav > a {
+    /* margin-left: 14px; */
+    margin: 0 0.7em;
+    color: #FFF;
 }
 
-.title{
+.title {
     display: flex;
     justify-content: flex-end;
     line-height: 86px;
-    padding-left: 37%;
+    padding-left: 38%;
     font-size: 16px;
 }
 
-.text{
+.text {
+    height: 500px;
     text-align: center;
-    margin-top: 80px;
-    font-size: 250px;
-}
-.main_text0{
-    text-align: center;
-    margin-top: 200px;
-}
-.text5{
-    margin-right: 600px;
-}
-.text7{
-    margin-left: 600px;
+    margin-top: 5px;
+    font-size: 200px;
 }
 
-.main_content1{
-    margin-top: 250px;
+.text0 {
+    color: rgb(226, 226, 18);
 }
-.main_text1{
-    text-align: center;
-    font-size: 50px;
+
+.text0, .text1, .text2, .text3, .text4{
     font-weight: 400;
 }
 
-.video-container{
+.main_text0 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.text5 {
+    margin-right: 550px;
+}
+
+.text7 {
+    margin-left: 550px;
+}
+
+.main_content1 {
+    margin-top: 250px;
     position: relative;
 }
-.video{
-    padding: 5rem;
-}
 
-.left{
-    top: 15rem;
-    font-size: 10px;
+.main_text1 {
+    font-family: 'Pretendard';
+    font-size: 39px;
+    font-style: normal;
+    font-weight: 500;
     position: absolute;
-    left: 10px;
-    text-align: left;
-    transform: translateY(-20%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-45%, -45%);
+    opacity: 0;
+    transition: opacity 1.8s ease;
 }
-.right{
-    top: 15rem;
-    font-size: 10px;
-    position: absolute;
-    right: 10px;
-    text-align: right;
-    transform: translateY(-20%);
+.main_content1 .video {
+    opacity: 1;
+    transition: opacity 1.8s ease;
 }
 
+.main_content1 .main_text1 {
+    opacity: 0;
+    transition: opacity 1.8s ease;
+}
 
-.atk{
+.main_content1.scrolled .video {
+    opacity: 0.5;
+}
+
+.main_content1.scrolled .main_text1 {
+    opacity: 1;
+}
+
+.video {
+    position: relative;
+    width: 100vw;
+    opacity: 1;
+    transition: opacity 0.3s ease-out;
+}
+
+.video1 {
+    position: relative;
+    width: 100vw;
+}
+
+.atk a {
+    color: #fff;
+}
+
+.atk {
     font-size: 22px;
     padding: 14px;
-}
-.atk > a{
-    color: #000000;
-    position: relative;
-    text-decoration: underline;
-}
-
-.main_content2{
-    padding-top: 15%;
-}
-.main_text2{
     text-align: center;
 }
-.main_text2 span{
-    font-size: 170px;
+
+.main_content2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 15%;
+}
+
+.main_text2 span {
+    font-size: 25px;
     font-weight: bold;
 }
 
-.main_content3 .video1{
+.main_content3 .video1 {
     width: 97.5%;
     height: 80%;
     margin: 100px 0 0 20px;
 }
 
-.clear{
+.clear {
     clear: left;
 }
 
-.main_content4{
+.main_content4 {
     padding-top: 10%;
 }
-.main_text4{
+
+.main_text4 {
     text-align: center;
     font-size: 45px;
     font-weight: 400;
 }
+
 .atk1 {
-    color: #000000;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     text-decoration: underline;
     padding-top: 3%;
 }
 
-.t1{
-    margin-bottom: 25%;
-}
-.t2{
-    margin-bottom: 25%;
-}
-.t3{
-    margin-bottom: 25%;
-}
-.t4{
-    margin-bottom: 25%;
-}
-
-.cover{
-    width: 10px;
-    margin-bottom: 10rem;
+#box {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
 }
-.cover:nth-child(1){
-    margin-top: 5vh;
-    transform: rotate(-2deg);
-    /* background-color: #ff3796; */
-}
-/* .cover:nth-child(1){
-    transform: rotate(2deg);
-    background-color: #5800ff;
-    justify-content: flex-end;
-} */
-.first-parallel{
+
+/* 배경 이미지 어둠 주기는 css */
+#bg-img {
     display: flex;
-    padding: 3rem 0;
-    font-size: 5rem;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.82), rgba(0, 0, 0, 0.82)), url(/img/image\ 34.png) -986.188px -193.612px / 194.313% 120.89% no-repeat;
+}
+
+#bg-t2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.82), rgba(0, 0, 0, 0.82)), url(/img/image\ 35.png) -986.188px -193.612px / 194.313% 120.89% no-repeat;
+}
+
+.box_img, .box_t2 {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    margin: 20px 0;
+}
+
+.t1, .t2 {
+    text-align: center;
+    padding: 20px;
+    color: #fff;
+}
+
+.cover {
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 5rem 0;
+    font-size: 50px;
+}
+
+.first-parallel {
+    display: inline-block;
+    white-space: nowrap;
+    animation: scroll-left 50s linear infinite;
+}
+
+@keyframes scroll-left {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+.main_text5 {
+    position: relative;
+    right: 20%;
+    height: 1000px; /* Adjust height as necessary */
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.dmsdj{
+    margin-left: 10%;
+    font-size: 32px;
+    font-weight: 700;
+}
+.dmsdj span{
+    padding-left: 1%;
+    font-size: 16px;
+}
+
+.drug1 {
+    position: absolute;
+    transition: transform 0.5s ease; /* 이동 애니메이션을 위한 transition 효과 추가 */
+}
+
+.main-text5 {
+    text-align: center;
+    font-size: 24px;
+}
+
+.center-text{
+    display: inline-block;
+    text-align: left;
+}
+
+.main-2{
+    line-height: 5;
+} 
+.main-8{
+    display: block; 
+    line-height: 1.5; 
+    line-height: 300px;
+}
+.no-drug {
+    font-family: "Super Festival";
+    padding-left: 20%;
+    margin-top: 10px;
+    text-align: left;
 }
 
 
-
-
-.footer{
+.footer {
     top: 100%;
     text-align: center;
 }
-.footer_text{
+
+.footer_text {
     font-size: 9rem;
     font-weight: bolder;
 }
 
+
+/* main_content6 */
+.main_content6 {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    margin-top: 40%;
+}
+
+.main_text6 {
+    display: flex;
+    align-items: flex-start;
+}
+#box-main6 {
+    background-color: red;
+    width: 1000px;
+    height: 720px; 
+}
+
+.description-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin-right: 20px; 
+}
+
+.main-description {
+    margin-bottom: 500px; 
+    font-size: 30px; 
+}
+
+#drug {
+    background-color: red;
+    color: white;
+    font-size: 30px;
+    padding: 5px 10px;
+    width: 320px;
+}
+
+.description-container p {
+    margin: 15px 0;
+}
+
+.description-container span {
+    display: inline-block;
+    margin-top: 10%;
+}
+
+#size{
+    padding-top: 50%;
+    font-size: 20px;
+}
+.size{
+    padding-bottom: 30%;
+    font-size: 16px;
+}
+button {
+    width: 230px;
+    border-radius: 50px;
+    padding: 10px 15px;
+    background-color: #ff0909; 
+    color: #fff; 
+    border: none;
+    font-size: 16px;
+    display: flex;
+    align-items: center; 
+}
+
+button svg {
+    margin-left: 5px; 
+    width: 1em; 
+    height: 1em; 
+}
+
+.box-main6-container {
+    display: flex;
+    justify-content: center; /* 수평 가운데 정렬 */
+    margin-top: 28rem; /* 위쪽 여백 추가 */
+    margin-bottom: 30%;
+}
+
+.box-main6 {
+    width: 250px;
+    height: 600px;
+    background-color: rgb(255, 0, 0); /* 원하는 배경색으로 변경 */
+    margin: 0 10px; /* 좌우 여백 설정 */
+}
+
+
+
+
 /* bottom, footer_content */
 
-.bottom{
+.bottom {
     padding-top: 8%;
 }
 
-.bottom .footer_main{
+.bottom a {
+    color: #fff;
+}
+
+.bottom .footer_main {
     font-size: 25px;
     text-align: left;
     margin-left: 2%;
 }
 
-.footer_content{
+.footer_content {
     display: flex;
 }
 
-.footer_content span{
-    font-size: 10px;
+.footer_content li {
+    font-size: 12px;
 }
-.bottom .footer_center{
+
+.bottom .footer_center {
     margin-left: 35%;
 }
 
-.bottom .footer_right{
-    margin-left: 10%;
-}
-.bottom .footer_left{
+.bottom .footer_right {
     margin-left: 10%;
 }
 
-
-.bottom .footer_main a {
-    display: block;
-}
-.bottom .footer_center a{
-    display: block;
-}
-.bottom .footer_right a{
-    display: block;
-}
-.bottom .footer_left a{
-    display: block;
+.bottom .footer_left {
+    margin-left: 10%;
 }
 
-.end{
+.line {
+    display: block;
+    margin-left: 30%;
+}
+.line2{
+    margin-left: 30%;
+    margin-top: 10%;
+    display: block;
+}
+.ul-line{
+    margin-left: 60%;
+    width: 300px;
+}
+.li-1, .li-2{
+    margin-bottom: 5%;
+    font-size: 12px;
+}
+
+
+.bottom .footer_center a {
+    display: block;
+}
+
+.bottom .footer_right a {
+    display: block;
+}
+
+.bottom .footer_left a {
+    display: block;
+}
+
+.end {
     padding: 0;
     margin: 3% 0 0 0;
 }
 
-.footer_bottom{
+
+.footer_bottom {
     padding-top: 5%;
     margin-left: 2%;
 }
+#footer_bottom{
+    margin-left: 2%;
+    font-size: 25px;
+    text-align: left;
+}
 
-#left{
-    margin-left: 50.3%;
+#left {
+    margin-left: 57%;
+    padding-bottom: 0.5%;
+    font-size: 1.5rem;
+}
+#left2{
+    margin-left: 57%;
     padding-bottom: 5%;
+    font-size: 0.8rem;
+}
+#end-li1{
+    display: block;
+    margin-left: 14%;
+    font-size: 10px;
+}
+#end-li2{
+    margin-left: 14%;
+    font-size: 10px;
 }
 
-#right{
-    margin-left: 14.8%;
+
+.random-font {
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    font-family: "Super Festival";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
-.end span{
-    font-size: 10px;
+
+@keyframes move {
+    0% { transform: translate(0, 0); }
+    100% { transform: translate(var(--random-x), var(--random-y)); }
+}
+
+.animate {
+    animation: move 2s infinite alternate;
 }
